--- a/prepros.config
+++ b/prepros.config
@@ -888,6 +888,7 @@
       {
         "file": "style/index.scss",
         "config": {
+          "customOutput": "style/index.css",
           "tasks": {
             "minify-css": {
               "enable": true
