--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,17 @@
     },
     "files": [
       {
+        "file": "style/_general.scss",
+        "config": {
+          "customOutput": "style/_general.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "style/index.css",
         "config": {
           "autoCompile": true
@@ -889,6 +900,16 @@
         "file": "style/index.scss",
         "config": {
           "customOutput": "style/index.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "style/project.scss",
+        "config": {
           "tasks": {
             "minify-css": {
               "enable": true
