--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,18 @@
     },
     "files": [
       {
+        "file": "style/_contact.scss",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "style/contact.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "style/_general.scss",
         "config": {
           "customOutput": "style/_general.css",
